# ics-tool

./: .gitignore  pyproject.toml
ics_tool/: cli.py  merge.py
