[tool.poetry]
name = "ics-tool"
version = "0.1.0"
description = "Simple ICS file manipulation tool"
authors = ["Michal Przytulski <michal@przytulski.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
ics = "^0.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ics = 'ics_tool.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
